@@ -19,3 +19,4 @@ pypi or custom url
 28-Mar-2011: creating src dir if not exists
 29-Mar-2011: fixing template urls, it didn't use global url not it does.
 08-Apr-2011: fixing template urls, know serves uploaded files in development mode.
+07-Oct-2011: new template for base.html using html5
